--- a/login.css
+++ b/login.css
@@ -11,7 +11,7 @@ main {
 }
 
 body {
-    font: 10px/1.5 Arial;
+    font: 14px/1.5 Arial;
 }
 
 a {
@@ -19,133 +19,115 @@ a {
     color: #444;
 }
 
-header {
-    position: relative;
-    width: 100%;
-}
-
-header .user {
-    position: absolute;
-    font-size: 2em;
-    margin: 10px;
-    right: 0%;
-    z-index: 1;
+ul,
+li {
+    list-style: none;
 }
 
 main {
     background: url(./bg.jpg) center center no-repeat rgba(255, 152, 0, 0.45);
     background-size: cover;
-    position: relative;
 }
 
-.layout {
-    background-color: #fff;
-    padding: 15px;
-    width: 400px;
+header {
     position: absolute;
-    top: 50%;
+    top: 10px;
+    width: 100%;
+}
+
+header .login {
+    float: right;
+    margin-right: 20px;
+    font-size: 20px;
+}
+
+.flip-modal {
+    display: none;
+}
+
+.show {
+    display: block !important;
+}
+
+.modal {
+    position: absolute;
     left: 50%;
+    top: 50%;
     transform: translate(-50%, -50%);
-    /* display: none; */
+    width: 400px;
+    padding: 16px;
+    background-color: #fff;
     box-shadow: 0 3px 4px 5px rgba(0, 0, 0, 0.2);
 }
 
-/* login */
-.layout .login .tab-reg {
-    text-align: center;
-    position: relative;
-    padding: 10px;
-}
-
-.layout .login .tab-reg a>i {
+.modal .close {
     position: absolute;
-    right: 5px;
+    right: 10px;
+    top: 10px;
 }
 
-.layout .login .modal {
-    font-size: 1.5em;
-    margin-right: 10px;
-    padding-bottom: 5px;
-}
-
-.layout .login .tab-reg .modal.log {
-    border-bottom: 2px solid #ccc;
-}
-
-.layout .login .container input {
-    margin-top: 20px;
-    padding: 10px 25px;
-}
-
-.layout .login .container {
-    position: relative;
+.modal .tabs {
     text-align: center;
 }
 
-.layout .login .container .fa-user-o,
-.fa-lock {
-    position: absolute;
-    top: 33px;
-    left: 82px;
+.modal .tabs a {
+    display: inline-block;
+    font-size: 16px;
+    margin: 0 10px;
+    color: #666;
 }
 
-.layout .login .container-sub {
-    margin-left: 73px;
-    margin-top: 20px;
+.modal .tabs a.active {
+    border-bottom: 2px solid #444;
+    color: #444;
 }
 
-.layout .login .container-sub .sub {
-    background-color: #fff;
-    padding: 5px;
-    border: 1px solid #ccc;
+.modal .content {
+    padding: 20px 40px;
 }
 
-/* register */
-.layout .register .tab-reg {
-    text-align: center;
+.modal .errormsg {
+    color: #ff9800;
+    font-size: 12px;
+}
+
+.modal .content .input-field {
     position: relative;
-    padding: 10px;
+    margin-top: 10px;
 }
 
-.layout .register .tab-reg a>i {
+.modal .content .input-field .fa {
     position: absolute;
-    right: 5px;
+    left: 13px;
+    top: 13px;
 }
 
-.layout .register .modal {
-    font-size: 1.5em;
-    margin-right: 10px;
-    padding-bottom: 5px;
+.modal .content input[type=text],
+.modal .content input[type=password] {
+    width: 100%;
+    padding: 10px 10px 10px 28px;
+    outline: none;
 }
 
-.layout .register .tab-reg .modal.reg {
-    border-bottom: 2px solid #ccc;
+.modal .content input[type=submit] {
+    padding: 6px 10px;
+    border: none;
+    background: #fff;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.4);
+    outline: none;
 }
 
-.layout .register .container input {
-    margin-top: 20px;
-    padding: 10px 25px;
+
+.flip-modal.login .modal-login,
+.flip-modal.register .modal-register {
+    transform: translate(-50%, -50%) rotateY(0deg);
+    backface-visibility: hidden;
+    transition: all 1s;
 }
 
-.layout .register .container {
-    position: relative;
-    text-align: center;
-}
-
-.layout .register .container .fa-user-o,
-.fa-lock {
-    position: absolute;
-    top: 33px;
-    left: 82px;
-}
-
-.layout .register .container-sub {
-    margin-left: 73px;
-    margin-top: 20px;
-}
-
-.layout .register .container-sub .sub {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    padding: 5px;
+.flip-modal.login .modal-register,
+.flip-modal.register .modal-login {
+    transform: translate(-50%, -50%) rotateY(180deg);
+    backface-visibility: hidden;
+    transition: all 1s;
 }
